# torch-graph-force

./: .flake8  .gitignore  LICENSE.md  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
requirements/: build.txt  test.txt
tests/: test_data.py  test_layout.py  test_model.py
torch_force_graph/: __init__.py  benchmark.py  data.py  layout.py
torch_graph_force/: __init__.py  model.py  utils.py
